src/src/parser/parser.output
Rules never reduced

   15 FuncType: "int"


State 2 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: AstRoot $end

    1 AstRoot: CompUnit

    2 CompUnit: VarDecl
    3         | FuncDef
    4         | CompUnit VarDecl
    5         | CompUnit FuncDef

    6 Decl: VarDecl

    7 VarDecl: "int" VarDefs ";"

    8 VarDefs: VarDef
    9        | VarDefs "," VarDef

   10 VarDef: IDENT
   11       | IDENT "=" Exp
   12       | IDENT "[" INTCONST "]"
   13       | IDENT "[" INTCONST "]" "[" INTCONST "]"

   14 Cond: LOrExp

   15 FuncType: "int"
   16         | "void"

   17 Stmt: LVal "=" Exp ";"
   18     | Exp ";"
   19     | ";"
   20     | Block
   21     | "if" "(" Cond ")" Stmt
   22     | "if" "(" Cond ")" Stmt "else" Stmt
   23     | "while" "(" Cond ")" Stmt
   24     | "return" Exp ";"
   25     | "return" ";"

   26 FuncDef: FuncType IDENT "(" ")" Block
   27        | FuncType IDENT "(" FuncParams ")" Block

   28 FuncParams: FuncParam
   29           | FuncParams "," FuncParam

   30 FuncParam: "int" IDENT

   31 Block: "{" "}"
   32      | "{" BlockItems "}"

   33 BlockItems: BlockItem
   34           | BlockItems BlockItem

   35 BlockItem: Stmt
   36          | Decl

   37 Exp: AddExp

   38 LVal: IDENT
   39     | IDENT "[" Exp "]"

   40 PrimaryExp: LVal
   41           | IntConst
   42           | "(" Exp ")"

   43 IntConst: INTCONST

   44 UnaryExp: PrimaryExp
   45         | IDENT "(" ")"
   46         | IDENT "(" FuncRParams ")"
   47         | UnaryOp UnaryExp

   48 UnaryOp: "+"
   49        | "-"
   50        | "!"

   51 FuncRParams: Exp
   52            | FuncRParams "," Exp

   53 MulExp: UnaryExp
   54       | MulExp "*" UnaryExp
   55       | MulExp "/" UnaryExp
   56       | MulExp "%" UnaryExp

   57 AddExp: MulExp
   58       | AddExp "+" MulExp
   59       | AddExp "-" MulExp

   60 RelExp: AddExp
   61       | RelExp "<" AddExp
   62       | RelExp ">" AddExp
   63       | RelExp "<=" AddExp
   64       | RelExp ">=" AddExp

   65 EqExp: RelExp
   66      | EqExp "==" RelExp
   67      | EqExp "!=" RelExp

   68 LAndExp: EqExp
   69        | LAndExp "&&" EqExp

   70 LOrExp: LAndExp
   71       | LOrExp "||" LAndExp


Terminals, with rules where they appear

$end (0) 0
error (256)
"+" (258) 48 58
"-" (259) 49 59
"=" (260) 11 17
"*" (261) 54
"/" (262) 55
"%" (263) 56
"<" (264) 61
">" (265) 62
"<=" (266) 63
">=" (267) 64
"==" (268) 66
"!=" (269) 67
"&&" (270) 69
"||" (271) 71
"!" (272) 50
";" (273) 7 17 18 19 24 25
"," (274) 9 29 52
"(" (275) 21 22 23 26 27 42 45 46
")" (276) 21 22 23 26 27 42 45 46
"{" (277) 31 32
"}" (278) 31 32
"if" (279) 21 22
"else" (280) 22
"while" (281) 23
"void" (282) 16
"[" (283) 12 13 39
"]" (284) 12 13 39
"int" (285) 7 15 30
"return" (286) 24 25
IDENT (287) 10 11 12 13 26 27 30 38 39 45 46
INTCONST (288) 12 13 43


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
AstRoot (35)
    on left: 1, on right: 0
CompUnit (36)
    on left: 2 3 4 5, on right: 1 4 5
Decl (37)
    on left: 6, on right: 36
VarDecl (38)
    on left: 7, on right: 2 4 6
VarDefs (39)
    on left: 8 9, on right: 7 9
VarDef (40)
    on left: 10 11 12 13, on right: 8 9
Cond (41)
    on left: 14, on right: 21 22 23
FuncType (42)
    on left: 15 16, on right: 26 27
Stmt (43)
    on left: 17 18 19 20 21 22 23 24 25, on right: 21 22 23 35
FuncDef (44)
    on left: 26 27, on right: 3 5
FuncParams (45)
    on left: 28 29, on right: 27 29
FuncParam (46)
    on left: 30, on right: 28 29
Block (47)
    on left: 31 32, on right: 20 26 27
BlockItems (48)
    on left: 33 34, on right: 32 34
BlockItem (49)
    on left: 35 36, on right: 33 34
Exp (50)
    on left: 37, on right: 11 17 18 24 39 42 51 52
LVal (51)
    on left: 38 39, on right: 17 40
PrimaryExp (52)
    on left: 40 41 42, on right: 44
IntConst (53)
    on left: 43, on right: 41
UnaryExp (54)
    on left: 44 45 46 47, on right: 47 53 54 55 56
UnaryOp (55)
    on left: 48 49 50, on right: 47
FuncRParams (56)
    on left: 51 52, on right: 46 52
MulExp (57)
    on left: 53 54 55 56, on right: 54 55 56 57 58 59
AddExp (58)
    on left: 57 58 59, on right: 37 58 59 60 61 62 63 64
RelExp (59)
    on left: 60 61 62 63 64, on right: 61 62 63 64 65 66 67
EqExp (60)
    on left: 65 66 67, on right: 66 67 68 69
LAndExp (61)
    on left: 68 69, on right: 69 70 71
LOrExp (62)
    on left: 70 71, on right: 14 71


state 0

    0 $accept: . AstRoot $end

    "void"  shift, and go to state 1
    "int"   shift, and go to state 2

    AstRoot   go to state 3
    CompUnit  go to state 4
    VarDecl   go to state 5
    FuncType  go to state 6
    FuncDef   go to state 7


state 1

   16 FuncType: "void" .

    $default  reduce using rule 16 (FuncType)


state 2

    7 VarDecl: "int" . VarDefs ";"
   15 FuncType: "int" .

    IDENT  shift, and go to state 8

    IDENT  [reduce using rule 15 (FuncType)]

    VarDefs  go to state 9
    VarDef   go to state 10


state 3

    0 $accept: AstRoot . $end

    $end  shift, and go to state 11


state 4

    1 AstRoot: CompUnit .
    4 CompUnit: CompUnit . VarDecl
    5         | CompUnit . FuncDef

    "void"  shift, and go to state 1
    "int"   shift, and go to state 2

    $default  reduce using rule 1 (AstRoot)

    VarDecl   go to state 12
    FuncType  go to state 6
    FuncDef   go to state 13


state 5

    2 CompUnit: VarDecl .

    $default  reduce using rule 2 (CompUnit)


state 6

   26 FuncDef: FuncType . IDENT "(" ")" Block
   27        | FuncType . IDENT "(" FuncParams ")" Block

    IDENT  shift, and go to state 14


state 7

    3 CompUnit: FuncDef .

    $default  reduce using rule 3 (CompUnit)


state 8

   10 VarDef: IDENT .
   11       | IDENT . "=" Exp
   12       | IDENT . "[" INTCONST "]"
   13       | IDENT . "[" INTCONST "]" "[" INTCONST "]"

    "="  shift, and go to state 15
    "["  shift, and go to state 16

    $default  reduce using rule 10 (VarDef)


state 9

    7 VarDecl: "int" VarDefs . ";"
    9 VarDefs: VarDefs . "," VarDef

    ";"  shift, and go to state 17
    ","  shift, and go to state 18


state 10

    8 VarDefs: VarDef .

    $default  reduce using rule 8 (VarDefs)


state 11

    0 $accept: AstRoot $end .

    $default  accept


state 12

    4 CompUnit: CompUnit VarDecl .

    $default  reduce using rule 4 (CompUnit)


state 13

    5 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 5 (CompUnit)


state 14

   26 FuncDef: FuncType IDENT . "(" ")" Block
   27        | FuncType IDENT . "(" FuncParams ")" Block

    "("  shift, and go to state 19


state 15

   11 VarDef: IDENT "=" . Exp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Exp         go to state 26
    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 16

   12 VarDef: IDENT "[" . INTCONST "]"
   13       | IDENT "[" . INTCONST "]" "[" INTCONST "]"

    INTCONST  shift, and go to state 34


state 17

    7 VarDecl: "int" VarDefs ";" .

    $default  reduce using rule 7 (VarDecl)


state 18

    9 VarDefs: VarDefs "," . VarDef

    IDENT  shift, and go to state 8

    VarDef  go to state 35


state 19

   26 FuncDef: FuncType IDENT "(" . ")" Block
   27        | FuncType IDENT "(" . FuncParams ")" Block

    ")"    shift, and go to state 36
    "int"  shift, and go to state 37

    FuncParams  go to state 38
    FuncParam   go to state 39


state 20

   48 UnaryOp: "+" .

    $default  reduce using rule 48 (UnaryOp)


state 21

   49 UnaryOp: "-" .

    $default  reduce using rule 49 (UnaryOp)


state 22

   50 UnaryOp: "!" .

    $default  reduce using rule 50 (UnaryOp)


state 23

   42 PrimaryExp: "(" . Exp ")"

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Exp         go to state 40
    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 24

   38 LVal: IDENT .
   39     | IDENT . "[" Exp "]"
   45 UnaryExp: IDENT . "(" ")"
   46         | IDENT . "(" FuncRParams ")"

    "("  shift, and go to state 41
    "["  shift, and go to state 42

    $default  reduce using rule 38 (LVal)


state 25

   43 IntConst: INTCONST .

    $default  reduce using rule 43 (IntConst)


state 26

   11 VarDef: IDENT "=" Exp .

    $default  reduce using rule 11 (VarDef)


state 27

   40 PrimaryExp: LVal .

    $default  reduce using rule 40 (PrimaryExp)


state 28

   44 UnaryExp: PrimaryExp .

    $default  reduce using rule 44 (UnaryExp)


state 29

   41 PrimaryExp: IntConst .

    $default  reduce using rule 41 (PrimaryExp)


state 30

   53 MulExp: UnaryExp .

    $default  reduce using rule 53 (MulExp)


state 31

   47 UnaryExp: UnaryOp . UnaryExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 43
    UnaryOp     go to state 31


state 32

   54 MulExp: MulExp . "*" UnaryExp
   55       | MulExp . "/" UnaryExp
   56       | MulExp . "%" UnaryExp
   57 AddExp: MulExp .

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 57 (AddExp)


state 33

   37 Exp: AddExp .
   58 AddExp: AddExp . "+" MulExp
   59       | AddExp . "-" MulExp

    "+"  shift, and go to state 47
    "-"  shift, and go to state 48

    $default  reduce using rule 37 (Exp)


state 34

   12 VarDef: IDENT "[" INTCONST . "]"
   13       | IDENT "[" INTCONST . "]" "[" INTCONST "]"

    "]"  shift, and go to state 49


state 35

    9 VarDefs: VarDefs "," VarDef .

    $default  reduce using rule 9 (VarDefs)


state 36

   26 FuncDef: FuncType IDENT "(" ")" . Block

    "{"  shift, and go to state 50

    Block  go to state 51


state 37

   30 FuncParam: "int" . IDENT

    IDENT  shift, and go to state 52


state 38

   27 FuncDef: FuncType IDENT "(" FuncParams . ")" Block
   29 FuncParams: FuncParams . "," FuncParam

    ","  shift, and go to state 53
    ")"  shift, and go to state 54


state 39

   28 FuncParams: FuncParam .

    $default  reduce using rule 28 (FuncParams)


state 40

   42 PrimaryExp: "(" Exp . ")"

    ")"  shift, and go to state 55


state 41

   45 UnaryExp: IDENT "(" . ")"
   46         | IDENT "(" . FuncRParams ")"

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    ")"       shift, and go to state 56
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Exp          go to state 57
    LVal         go to state 27
    PrimaryExp   go to state 28
    IntConst     go to state 29
    UnaryExp     go to state 30
    UnaryOp      go to state 31
    FuncRParams  go to state 58
    MulExp       go to state 32
    AddExp       go to state 33


state 42

   39 LVal: IDENT "[" . Exp "]"

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Exp         go to state 59
    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 43

   47 UnaryExp: UnaryOp UnaryExp .

    $default  reduce using rule 47 (UnaryExp)


state 44

   54 MulExp: MulExp "*" . UnaryExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 60
    UnaryOp     go to state 31


state 45

   55 MulExp: MulExp "/" . UnaryExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 61
    UnaryOp     go to state 31


state 46

   56 MulExp: MulExp "%" . UnaryExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 62
    UnaryOp     go to state 31


state 47

   58 AddExp: AddExp "+" . MulExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 63


state 48

   59 AddExp: AddExp "-" . MulExp

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 64


state 49

   12 VarDef: IDENT "[" INTCONST "]" .
   13       | IDENT "[" INTCONST "]" . "[" INTCONST "]"

    "["  shift, and go to state 65

    $default  reduce using rule 12 (VarDef)


state 50

   31 Block: "{" . "}"
   32      | "{" . BlockItems "}"

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    ";"       shift, and go to state 66
    "("       shift, and go to state 23
    "{"       shift, and go to state 50
    "}"       shift, and go to state 67
    "if"      shift, and go to state 68
    "while"   shift, and go to state 69
    "int"     shift, and go to state 70
    "return"  shift, and go to state 71
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Decl        go to state 72
    VarDecl     go to state 73
    Stmt        go to state 74
    Block       go to state 75
    BlockItems  go to state 76
    BlockItem   go to state 77
    Exp         go to state 78
    LVal        go to state 79
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 51

   26 FuncDef: FuncType IDENT "(" ")" Block .

    $default  reduce using rule 26 (FuncDef)


state 52

   30 FuncParam: "int" IDENT .

    $default  reduce using rule 30 (FuncParam)


state 53

   29 FuncParams: FuncParams "," . FuncParam

    "int"  shift, and go to state 37

    FuncParam  go to state 80


state 54

   27 FuncDef: FuncType IDENT "(" FuncParams ")" . Block

    "{"  shift, and go to state 50

    Block  go to state 81


state 55

   42 PrimaryExp: "(" Exp ")" .

    $default  reduce using rule 42 (PrimaryExp)


state 56

   45 UnaryExp: IDENT "(" ")" .

    $default  reduce using rule 45 (UnaryExp)


state 57

   51 FuncRParams: Exp .

    $default  reduce using rule 51 (FuncRParams)


state 58

   46 UnaryExp: IDENT "(" FuncRParams . ")"
   52 FuncRParams: FuncRParams . "," Exp

    ","  shift, and go to state 82
    ")"  shift, and go to state 83


state 59

   39 LVal: IDENT "[" Exp . "]"

    "]"  shift, and go to state 84


state 60

   54 MulExp: MulExp "*" UnaryExp .

    $default  reduce using rule 54 (MulExp)


state 61

   55 MulExp: MulExp "/" UnaryExp .

    $default  reduce using rule 55 (MulExp)


state 62

   56 MulExp: MulExp "%" UnaryExp .

    $default  reduce using rule 56 (MulExp)


state 63

   54 MulExp: MulExp . "*" UnaryExp
   55       | MulExp . "/" UnaryExp
   56       | MulExp . "%" UnaryExp
   58 AddExp: AddExp "+" MulExp .

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 58 (AddExp)


state 64

   54 MulExp: MulExp . "*" UnaryExp
   55       | MulExp . "/" UnaryExp
   56       | MulExp . "%" UnaryExp
   59 AddExp: AddExp "-" MulExp .

    "*"  shift, and go to state 44
    "/"  shift, and go to state 45
    "%"  shift, and go to state 46

    $default  reduce using rule 59 (AddExp)


state 65

   13 VarDef: IDENT "[" INTCONST "]" "[" . INTCONST "]"

    INTCONST  shift, and go to state 85


state 66

   19 Stmt: ";" .

    $default  reduce using rule 19 (Stmt)


state 67

   31 Block: "{" "}" .

    $default  reduce using rule 31 (Block)


state 68

   21 Stmt: "if" . "(" Cond ")" Stmt
   22     | "if" . "(" Cond ")" Stmt "else" Stmt

    "("  shift, and go to state 86


state 69

   23 Stmt: "while" . "(" Cond ")" Stmt

    "("  shift, and go to state 87


state 70

    7 VarDecl: "int" . VarDefs ";"

    IDENT  shift, and go to state 8

    VarDefs  go to state 9
    VarDef   go to state 10


state 71

   24 Stmt: "return" . Exp ";"
   25     | "return" . ";"

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    ";"       shift, and go to state 88
    "("       shift, and go to state 23
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Exp         go to state 89
    LVal        go to state 27
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 72

   36 BlockItem: Decl .

    $default  reduce using rule 36 (BlockItem)


state 73

    6 Decl: VarDecl .

    $default  reduce using rule 6 (Decl)


state 74

   35 BlockItem: Stmt .

    $default  reduce using rule 35 (BlockItem)


state 75

   20 Stmt: Block .

    $default  reduce using rule 20 (Stmt)


state 76

   32 Block: "{" BlockItems . "}"
   34 BlockItems: BlockItems . BlockItem

    "+"       shift, and go to state 20
    "-"       shift, and go to state 21
    "!"       shift, and go to state 22
    ";"       shift, and go to state 66
    "("       shift, and go to state 23
    "{"       shift, and go to state 50
    "}"       shift, and go to state 90
    "if"      shift, and go to state 68
    "while"   shift, and go to state 69
    "int"     shift, and go to state 70
    "return"  shift, and go to state 71
    IDENT     shift, and go to state 24
    INTCONST  shift, and go to state 25

    Decl        go to state 72
    VarDecl     go to state 73
    Stmt        go to state 74
    Block       go to state 75
    BlockItem   go to state 91
    Exp         go to state 78
    LVal        go to state 79
    PrimaryExp  go to state 28
    IntConst    go to state 29
    UnaryExp    go to state 30
    UnaryOp     go to state 31
    MulExp      go to state 32
    AddExp      go to state 33


state 77

   33 BlockItems: BlockItem .

    $default  reduce using rule 33 (BlockItems)


state 78

   18 Stmt: Exp . ";"

    ";"  shift, and go to state 92


state 79

   17 Stmt: LVal . "=" Exp ";"
   40 PrimaryExp: LVal .

    "="  shift, and go to state 93

    $default  reduce using rule 40 (PrimaryExp)


state 80

   29 FuncParams: FuncParams "," FuncParam .

    $default  reduce using rule 29 (FuncParams)


state 81

   27 FuncDef: FuncType IDENT "(" FuncParams ")" Block .

    $default  reduce using rule 27 (FuncDef)


state 82

   52 FuncRParams: FuncRParams "," . Exp
